<resources>
    <string name="app_name">Agri Resources</string>

    <!---->
    <string name="check_network">Please check your Network</string>


    <!---->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version">Version</string>
    <string name="registration">Registration</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="grower_name">Grower name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="submit">Submit</string>


    <string name="wallet">Wallet Balance :</string>
    <string name="camera">Upload Product</string>
    <string name="resource_name">Resource name</string>
    <string name="rent_category">Rent Category</string>
    <string name="upload_document">Upload document</string>
    <string name="permission_need_allowed">You need to allow access to the permissions</string>
    <string name="permissions_not_granted">Camera Permission Denied, You cannot access camera.</string>
    <string name="permissions_granted">Camera Permission Granted, Now you can access camera.</string>
    <!---->
    <string name="please_enter_name">Please Enter Grower Name</string>
    <string name="please_enter_re_name">Please Select Resource Name</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_enter_pass">Please Enter Password</string>
    <string name="please_enter_rate">Please Enter rate</string>
    <string name="please_enter_address">Please Enter Address</string>
    <string name="please_enter_dis">Please Enter Description</string>
    <string name="please_enter_num">Please Enter Number Only</string>

    <!---->

    <!-- <string name="permission_read_phone_state_rationale1">Permission previously Denied</string>
    <string name="permissions_not_granted_read_phone_state1">Permission denied</string>
    <string name="permision_available_read_phone_state1">Permission granted</string>
    <string name="permision_granted">Permission granted</string>
    <string name="permissions_denied">Permission denied</string>
    -->

    <string name="rate">Rate</string>
    <string name="password">Password</string>
    <string name="description">Description</string>

    <string name="lend">Lend</string>
    <string name="rent">Rent</string>
    <string name="all_product">All Product</string>
    <string name="all_order">Orders For Renter</string>
    <string name="all_order_for_rantee">Orders For Rentee</string>
    <string name="book_now">Book Now</string>
    <string name="map">Map</string>
    <string name="help">Help</string>
    <string name="vi_imag">View Image</string>
    <string name="dashboard">Dashboard</string>
    <string name="confirm">Confirm</string>

    <string name="dialog_message_cancel">Are you sure want to cancel ?</string>
    <string name="dialog_message_confirm">Are you sure want to confirm ?</string>
    <string name="dialog_message_update">Are you sure want to update ?</string>
    <string name="dialog_message_delete">Are you sure want to delete ?</string>
    <string name="dialog_title">Are you sure want to confirm</string>
    <string name="ordersforrenter">Orders For Renter</string>
    <string name="getordersforrentee">Orders For Rentee</string>
    <string name="log_out">Log out</string>
    <string name="confirmed_orders">Confirmed Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="cancel_orders">Cancelled Orders</string>
    <string name="sale_orders">Products For Sale</string>
    <string name="buy_orders">Products For Buy</string>
    <string name="sale">Sale</string>
    <string name="wallet_recharge">Wallet Recharge</string>
    <string name="quantity">Quantity :</string>
    <string name="cancel">Cancel</string>
    <string name="my_products">My Products</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="show_cart_details">Show Cart Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--For Paytm-->
    <string name="msg_preparing_order">Preparing your order</string>
    <string name="thank_you">THANK YOU</string>
    <string name="btn_check_order">CHECK ORDERS</string>

</resources>
