<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PayTMActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_15sdp"
            app:indicatorColor="@color/green"
            app:indicatorName="BallPulseIndicator" />

        <TextView
            android:id="@+id/lbl_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:text="@string/msg_preparing_order"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_order_placed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/icon_status"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_check_black_48" />

        <TextView
            android:id="@+id/title_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:text="@string/thank_you"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="2sp"
            android:text="Your order placed successfully!"
            android:textColor="@color/lbl_secondary"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/btn_check_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/btn_check_order"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>