<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.CameraActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">


                    <com.vibrant.asp.customtext.MyTextLight
                        android:id="@+id/tvResourName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/resource_name"
                        android:textColor="@color/black_txt"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/editResName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/resource_name"
                        android:scrollbars="vertical"
                        android:ems="14"
                        android:maxLines="2"
                        android:scrollHorizontally="false"
                        android:inputType="textMultiLine"
                        android:textSize="@dimen/_14sdp" />


                    <com.vibrant.asp.customtext.MyTextLight
                        android:id="@+id/tvImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/upload_document"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black_txt"
                        android:textSize="@dimen/_14sdp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:weightSum="1.1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:orientation="vertical">

                          <ImageView
                                android:id="@+id/ivImage1"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_80sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/file" />

                            <com.vibrant.asp.customtext.MyButtonBold
                                android:id="@+id/btnChoose1"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_35sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:background="@drawable/custom_ripple_button"
                                android:paddingLeft="30dp"
                                android:paddingRight="30dp"
                                android:text="Choose Image 1"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"></LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/ivImage2"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_80sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/file" />

                            <com.vibrant.asp.customtext.MyButtonBold
                                android:id="@+id/btnChoose2"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_35sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:background="@drawable/custom_ripple_button"
                                android:paddingLeft="30dp"
                                android:paddingRight="30dp"
                                android:text="Choose Image 2"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />

                        </LinearLayout>
                    </LinearLayout>

                    <com.vibrant.asp.customtext.MyTextLight
                        android:id="@+id/tvRentCateg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:text="@string/rent_category"
                        android:visibility="gone"
                        android:textColor="@color/black_txt"
                        android:textSize="@dimen/_14sdp" />


                    <Spinner
                        android:id="@+id/spinnerSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:spinnerMode="dropdown"
                        android:dropDownWidth="fill_parent"
                        android:background="@android:drawable/btn_dropdown"/>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/lLayRentCatgry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/round_border"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">




                            <com.vibrant.asp.customtext.MyTextLight
                                android:id="@+id/tvRentCategory"
                                android:visibility="gone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:paddingLeft="5dp"
                                android:text="@string/rent_category"
                                android:textColor="#808080"
                                android:textSize="@dimen/_14sdp" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:visibility="gone"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_arrow_drop_down" />
                        </RelativeLayout>


                    </LinearLayout>

                    <com.vibrant.asp.customtext.MyTextLight
                        android:id="@+id/tvDist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/rate"
                        android:textColor="@color/black_txt"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/editRent"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/rate"
                        android:inputType="number"
                        android:maxLength="30"
                        android:textSize="@dimen/_14sdp" />

                    <com.vibrant.asp.customtext.MyTextLight
                        android:id="@+id/tvDiscrip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/description"
                        android:textColor="@color/black_txt"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/editDiscription"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@android:drawable/edit_text"
                        android:ems="14"
                        android:gravity="top|left"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false"
                        android:textSize="@dimen/_14sdp" />

                    <com.vibrant.asp.customtext.MyButtonBold
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_20sdp"
                        android:background="@drawable/custom_ripple_button"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>